--- a/monthlyGames/fLight Bikes (June 2023)/fLightBikes/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/monthlyGames/fLight Bikes (June 2023)/fLightBikes/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -347,7 +347,7 @@ StaticMeshComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,Propert
 BP_BikeChar_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 P_Bike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
 blankLevel_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
-C_PlayerBike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+C_PlayerBike_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
 Actor=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 PrimitiveComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 PlayerStartPIE=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
@@ -359,6 +359,10 @@ BikeWall_C=
 VectorFieldComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+EdGraph=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
+W_PlayerStatus_C=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
+Pawn=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
+K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
 
 [EditorStartup]
 LastLevel=/Game/blankLevel
@@ -368,6 +372,9 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/BikeWall.BikeWall
 OpenAssetsAtExit=/Game/Blueprints/P_Bike.P_Bike
+OpenAssetsAtExit=/Game/UI/W_PlayerStatus.W_PlayerStatus
+OpenAssetsAtExit=/Game/Blueprints/C_PlayerBike.C_PlayerBike
+OpenAssetsAtExit=/Game/Blueprints/Enum_PlayerState.Enum_PlayerState
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -402,7 +409,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Materials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1596,6 +1603,85 @@ EditorKeyboardShortcutSettings.StaticMeshViewportLODCmd=True
 EditorKeyboardShortcutSettings.StaticMeshEditor=True
 SpringArmComponent.Collision=False
 CameraComponent.Collision=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.WorldPositionOffset=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionDesaturation.MaterialExpressionDesaturation=True
+MaterialExpressionDesaturation.MaterialExpression=True
+MaterialExpressionVertexColor.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionSetMaterialAttributes.MaterialAttributes=True
+MaterialExpressionSetMaterialAttributes.MaterialExpression=True
+MaterialExpressionVolumetricAdvancedMaterialInput.MaterialExpression=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+W_PlayerStatus_C.Appearance=True
+W_PlayerStatus_C.Input=True
+W_PlayerStatus_C.Accessibility=True
+W_PlayerStatus_C.Interaction=True
+W_PlayerStatus_C.Designer=True
+W_PlayerStatus_C.Performance=True
+W_PlayerStatus_C.Behavior=True
+W_PlayerStatus_C.Render Transform=True
+W_PlayerStatus_C.Clipping=True
+W_PlayerStatus_C.Navigation=True
+W_PlayerStatus_C.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+TextBlock.Layout=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+W_PlayerStatus_C.Layout=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+UserDefinedEnum.Description=True
+UserDefinedEnum.Enumerators=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
@@ -1605,23 +1691,26 @@ RecentlyPlaced=/Game/Blueprints/BP_PlayerBase.BP_PlayerBase;
 RecentlyPlaced=/Game/Blueprints/basicBike.basicBike;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/P_Bike
-MRUItem1=/Game/Blueprints/BikeWall
-MRUItem2=/Game/Blueprints/C_PlayerBike
-MRUItem3=/Engine/EngineSky/SM_SkySphere
-MRUItem4=/Game/Inputs/Turn
-MRUItem5=/Game/Inputs/BikeControls
-MRUItem6=/Game/Inputs/CameraReset
-MRUItem7=/Game/Blueprints/BP_PlayerBase
-MRUItem8=/Game/Blueprints/BP_GamemodeBase
-MRUItem9=/Game/Blueprints/BP_BikeChar
-MRUItem10=/Game/Blueprints/BP_Bike
-MRUItem11=/Game/Inputs/CameraZoom
-MRUItem12=/Game/Inputs/CameraLook
-MRUItem13=/Game/Inputs/CameraControls
-MRUItem14=/Game/blankLevel
-MRUItem15=/Game/Blueprints/basicBike
-MRUItem16=/Game/Blueprints/NewBlueprint
+MRUItem0=/Game/Blueprints/Enum_PlayerState
+MRUItem1=/Game/UI/W_PlayerStatus
+MRUItem2=/Game/Materials/M_BikeColor
+MRUItem3=/Game/Blueprints/C_PlayerBike
+MRUItem4=/Game/Blueprints/BP_GamemodeBase
+MRUItem5=/Game/Blueprints/P_Bike
+MRUItem6=/Game/Blueprints/BikeWall
+MRUItem7=/Engine/EngineSky/SM_SkySphere
+MRUItem8=/Game/Inputs/Turn
+MRUItem9=/Game/Inputs/BikeControls
+MRUItem10=/Game/Inputs/CameraReset
+MRUItem11=/Game/Blueprints/BP_PlayerBase
+MRUItem12=/Game/Blueprints/BP_BikeChar
+MRUItem13=/Game/Blueprints/BP_Bike
+MRUItem14=/Game/Inputs/CameraZoom
+MRUItem15=/Game/Inputs/CameraLook
+MRUItem16=/Game/Inputs/CameraControls
+MRUItem17=/Game/blankLevel
+MRUItem18=/Game/Blueprints/basicBike
+MRUItem19=/Game/Blueprints/NewBlueprint
 
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
@@ -1650,6 +1739,7 @@ StaticMeshComponent.VirtualTexture=False
 SpringArmComponent.Collision=False
 SpringArmComponent.Rendering=False
 EditorLoadingSavingSettings.Startup=False
+UserDefinedEnum.Enumerators=True
 
 [MessageLog]
 LastLogListing=PIE
@@ -1830,11 +1920,11 @@ DataValidationSettings="\"Object\" "
 GameplayDebuggerUserSettings="\"Object\" "
 GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 BoxComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent="\"Object\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 FloatingPawnMovement="\"Object\" "
@@ -1859,6 +1949,30 @@ VectorFieldComponent="\"Object\" "
 StaticMesh="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialInterface="\"Object\" "
+MaterialExpressionMaterialFunctionCall="\"Object\" "
+MaterialExpression="\"Object\" "
+MaterialExpressionDesaturation="\"Object\" "
+MaterialExpressionVertexColor="\"Object\" "
+MaterialExpressionVectorParameter="\"Object\" "
+MaterialExpressionParameter="\"Object\" "
+MaterialExpressionSetMaterialAttributes="\"Object\" "
+MaterialExpressionVolumetricAdvancedMaterialInput="\"Object\" "
+TextBlock="\"Object\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
+W_PlayerStatus_C="\"Object\" "
+UserWidget="\"Object\" "
+CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
+UserDefinedEnum="\"Object\" "
+Enum="\"Object\" "
+Field="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/basicBike.basicBike=0
@@ -1878,6 +1992,9 @@ AssetViewerSettings="\"Object\" "
 /Game/Inputs/CameraReset.CameraReset=0
 /Game/Blueprints/BikeWall.BikeWall=0
 /Engine/EngineSky/SM_SkySphere.SM_SkySphere=0
+/Game/Materials/M_BikeColor.M_BikeColor=0
+/Game/UI/W_PlayerStatus.W_PlayerStatus=0
+/Game/Blueprints/Enum_PlayerState.Enum_PlayerState=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2992,6 +3109,10 @@ NewLevelDialog.TimeStamp=2023.05.30-00.27.39
 NewLevelDialog.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2023.05.30-00.27.37
 ExternalImagePicker.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2023.05.30-00.27.38
+MaterialEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.05.30-00.27.40
+SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -3166,4 +3287,262 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[WidgetTemplatesExpanded]
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=True
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+bCommonResolutionSelected=False
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=0
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=1
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
