Completed day 10 of the project and post mortem
Wrote a post mortem and added player death/respawning to the project.

--- a/monthlyGames/fLight Bikes (June 2023)/fLightBikes/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/monthlyGames/fLight Bikes (June 2023)/fLightBikes/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -354,7 +354,7 @@ PlayerStartPIE=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrap
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 BillboardComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 FloatingPawnMovement=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
-SpringArmComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
+SpringArmComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform,BoxComponent.Collision.Collision
 BikeWall_C=
 VectorFieldComponent=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Delta Transform,PropertyWrapper.DefaultValueCategory.TurnRate,CameraComponent.PostProcess.Rendering Features,BP_PlayerBase_C.Physics.ConstraintsGroup,BP_PlayerBase_C.Collision.Collision,BP_PlayerBase_C.TransformCommon.Transform
@@ -374,7 +374,6 @@ OpenAssetsAtExit=/Game/Blueprints/BikeWall.BikeWall
 OpenAssetsAtExit=/Game/Blueprints/P_Bike.P_Bike
 OpenAssetsAtExit=/Game/UI/W_PlayerStatus.W_PlayerStatus
 OpenAssetsAtExit=/Game/Blueprints/C_PlayerBike.C_PlayerBike
-OpenAssetsAtExit=/Game/Blueprints/Enum_PlayerState.Enum_PlayerState
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -1682,6 +1681,9 @@ K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
 UserDefinedEnum.Description=True
 UserDefinedEnum.Enumerators=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cube.Shape_Cube;
@@ -1691,26 +1693,26 @@ RecentlyPlaced=/Game/Blueprints/BP_PlayerBase.BP_PlayerBase;
 RecentlyPlaced=/Game/Blueprints/basicBike.basicBike;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Enum_PlayerState
-MRUItem1=/Game/UI/W_PlayerStatus
-MRUItem2=/Game/Materials/M_BikeColor
-MRUItem3=/Game/Blueprints/C_PlayerBike
-MRUItem4=/Game/Blueprints/BP_GamemodeBase
+MRUItem0=/Game/Blueprints/C_PlayerBike
+MRUItem1=/Game/Inputs/BikeControls
+MRUItem2=/Game/Inputs/RespawnBike
+MRUItem3=/Game/Blueprints/Enum_PlayerState
+MRUItem4=/Game/UI/W_PlayerStatus
 MRUItem5=/Game/Blueprints/P_Bike
 MRUItem6=/Game/Blueprints/BikeWall
-MRUItem7=/Engine/EngineSky/SM_SkySphere
-MRUItem8=/Game/Inputs/Turn
-MRUItem9=/Game/Inputs/BikeControls
-MRUItem10=/Game/Inputs/CameraReset
-MRUItem11=/Game/Blueprints/BP_PlayerBase
-MRUItem12=/Game/Blueprints/BP_BikeChar
-MRUItem13=/Game/Blueprints/BP_Bike
-MRUItem14=/Game/Inputs/CameraZoom
-MRUItem15=/Game/Inputs/CameraLook
-MRUItem16=/Game/Inputs/CameraControls
-MRUItem17=/Game/blankLevel
-MRUItem18=/Game/Blueprints/basicBike
-MRUItem19=/Game/Blueprints/NewBlueprint
+MRUItem7=/Game/Materials/M_BikeColor
+MRUItem8=/Game/Blueprints/BP_GamemodeBase
+MRUItem9=/Engine/EngineSky/SM_SkySphere
+MRUItem10=/Game/Inputs/Turn
+MRUItem11=/Game/Inputs/CameraReset
+MRUItem12=/Game/Blueprints/BP_PlayerBase
+MRUItem13=/Game/Blueprints/BP_BikeChar
+MRUItem14=/Game/Blueprints/BP_Bike
+MRUItem15=/Game/Inputs/CameraZoom
+MRUItem16=/Game/Inputs/CameraLook
+MRUItem17=/Game/Inputs/CameraControls
+MRUItem18=/Game/blankLevel
+MRUItem19=/Game/Blueprints/basicBike
 
 [DetailCategoriesAdvanced]
 PropertyWrapper.Variable=False
@@ -1740,6 +1742,7 @@ SpringArmComponent.Collision=False
 SpringArmComponent.Rendering=False
 EditorLoadingSavingSettings.Startup=False
 UserDefinedEnum.Enumerators=True
+TextBlock.Appearance=False
 
 [MessageLog]
 LastLogListing=PIE
@@ -1960,10 +1963,10 @@ MaterialExpressionVectorParameter="\"Object\" "
 MaterialExpressionParameter="\"Object\" "
 MaterialExpressionSetMaterialAttributes="\"Object\" "
 MaterialExpressionVolumetricAdvancedMaterialInput="\"Object\" "
-TextBlock="\"Object\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 W_PlayerStatus_C="\"Object\" "
 UserWidget="\"Object\" "
 CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" "
@@ -1995,6 +1998,7 @@ Field="\"Object\" "
 /Game/Materials/M_BikeColor.M_BikeColor=0
 /Game/UI/W_PlayerStatus.W_PlayerStatus=0
 /Game/Blueprints/Enum_PlayerState.Enum_PlayerState=0
+/Game/Inputs/RespawnBike.RespawnBike=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2036,7 +2040,7 @@ bShowParentClassInOverrides=True
 bShowEmptySections=True
 bShowAccessSpecifier=False
 Bookmarks=()
-PerBlueprintSettings=()
+PerBlueprintSettings=(("/Game/Blueprints/C_PlayerBike.C_PlayerBike", (Breakpoints=((Node="/Game/Blueprints/C_PlayerBike.C_PlayerBike:Create Bike Pawn.K2Node_SpawnActorFromClass_0")))))
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
