Implemented Chromatic Aberration
Created a new fullscreen post-process for chromatic aberration. It looks good! Also fixed some slider bugs in ImGui, so those work as well!

--- a/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj.filters
+++ b/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj.filters
@@ -235,5 +235,8 @@
     <FxCompile Include="RefractionCompositePS.hlsl">
       <Filter>Shaders\MRT Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="ChromaticAberrationPS.hlsl">
+      <Filter>Shaders\MRT Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
