Completed Day 2 of work
Fixed some post-process bugs, and did write-up

--- a/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj.filters
+++ b/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj.filters
@@ -238,5 +238,8 @@
     <FxCompile Include="ChromaticAberrationPS.hlsl">
       <Filter>Shaders\MRT Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="TestCS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
