Began Writing a Compute Shader
Began writing a compute shader for updating particles, instead of doing updates in the vertex shader.

--- a/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj.filters
+++ b/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj.filters
@@ -238,7 +238,7 @@
     <FxCompile Include="ChromaticAberrationPS.hlsl">
       <Filter>Shaders\MRT Shaders</Filter>
     </FxCompile>
-    <FxCompile Include="TestCS.hlsl">
+    <FxCompile Include="UpdateParticlesCS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
