--- a/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj.filters
+++ b/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj.filters
@@ -238,7 +238,7 @@
     <FxCompile Include="ChromaticAberrationPS.hlsl">
       <Filter>Shaders\MRT Shaders</Filter>
     </FxCompile>
-    <FxCompile Include="UpdateParticlesCS.hlsl">
+    <FxCompile Include="UpdateParticleCS.hlsl">
       <Filter>Shaders\Particle Shaders</Filter>
     </FxCompile>
     <FxCompile Include="EmitParticleCS.hlsl">
