--- a/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj
+++ b/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj
@@ -326,7 +326,7 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
     </FxCompile>
-    <FxCompile Include="UpdateParticlesCS.hlsl">
+    <FxCompile Include="UpdateParticleCS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">4.0</ShaderModel>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Compute</ShaderType>
