Began Git Revert
Began reverting to an earlier version. This is going to take some more work, but it's begun.

--- a/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj
+++ b/monthlyGames/DX11 Engine Improvements (July 2023)/neftJ-Assignment1-ImGui/DX11Starter.vcxproj
@@ -186,6 +186,7 @@
   <ItemGroup>
     <None Include="Lighting.hlsli" />
     <None Include="packages.config" />
+    <None Include="Particles.hlsli" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="BlurPS.hlsl">
